replaced loads of Integer.valueOf(SomeConstant) with constant Objects defined in server/SDMSConstants.java