@@ -53,7 +53,7 @@ public class SchedulingThread extends InternalSession
 	private Locklist publl = null;
 	private Vector<Long> resourceRequestList = null;
 	private final Object resourceRequestLock = new Object();
-	private final Integer lock = new Integer(0);
+	private final Object lock = new Object();
 	private Vector<Long> actualRequestList;
 
 	public static final int CREATE	= 1;
@@ -82,8 +82,6 @@ public class SchedulingThread extends InternalSession
 	public final static int FP_SCOPE	= 0;
 	public final static int FP_FOLDER	= 1;
 	public final static int FP_LOCAL	= 2;
-
-	private final static Integer ONE = new Integer(1);
 
 	public long envhit = 0;
 	public long envmiss = 0;
@@ -338,28 +336,28 @@ public class SchedulingThread extends InternalSession
 		pc.setNow();
 		needReSched = false;
 
-		Vector sv = SDMSScopeTable.idx_type.getVectorForUpdate(sysEnv, new Integer(SDMSScope.SERVER));
+		Vector sv = SDMSScopeTable.idx_type.getVectorForUpdate(sysEnv, SDMSConstants.S_SERVER);
 
-		Vector rjv = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, new Integer(SDMSSubmittedEntity.RUNNABLE), null, Integer.MAX_VALUE);
+		Vector rjv = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, SDMSConstants.SME_RUNNABLE, null, Integer.MAX_VALUE);
 		doTrace(cEnv, "Number of Runnable Jobs found: " + rjv.size(), SEVERITY_MESSAGE);
 
 		doTrace(cEnv, "==============> Rescheduling Runnables <=================\nStartTime = " + (dts.getTime() - timer), SEVERITY_MESSAGE);
 		rescheduleVector(sysEnv, rjv, sv, SDMSSubmittedEntity.RUNNABLE);
 
 		doTrace(cEnv, "==============> Rescheduling Resource Wait <=================\nStartTime = " + (dts.getTime() - timer), SEVERITY_MESSAGE);
-		Vector smev = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, new Integer(SDMSSubmittedEntity.RESOURCE_WAIT), null, Integer.MAX_VALUE);
+		Vector smev = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, SDMSConstants.SME_RESOURCE_WAIT, null, Integer.MAX_VALUE);
 		doTrace(cEnv, "Number of Jobs in Resource Wait found: " + smev.size(), SEVERITY_MESSAGE);
 
 		rescheduleVector(sysEnv, smev, sv, SDMSSubmittedEntity.RESOURCE_WAIT);
 
 		doTrace(cEnv, "==============> Rescheduling Synchronize Wait <=================\nStartTime = " + (dts.getTime() - timer), SEVERITY_MESSAGE);
-		smev = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, new Integer(SDMSSubmittedEntity.SYNCHRONIZE_WAIT), null, Integer.MAX_VALUE);
+		smev = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, SDMSConstants.SME_SYNCHRONIZE_WAIT, null, Integer.MAX_VALUE);
 		doTrace(cEnv, "Number of Jobs in Synchronize Wait found: " + smev.size(), SEVERITY_MESSAGE);
 
 		rescheduleVector(sysEnv, smev, sv, SDMSSubmittedEntity.SYNCHRONIZE_WAIT);
 
 		doTrace(cEnv, "==============> Rescheduling Dependency Wait <=================\nStartTime = " + (dts.getTime() - timer), SEVERITY_MESSAGE);
-		smev = SDMSSubmittedEntityTable.idx_state.getVector(sysEnv, new Integer(SDMSSubmittedEntity.DEPENDENCY_WAIT), null, Integer.MAX_VALUE);
+		smev = SDMSSubmittedEntityTable.idx_state.getVector(sysEnv, SDMSConstants.SME_DEPENDENCY_WAIT, null, Integer.MAX_VALUE);
 		doTrace(cEnv, "Number of Jobs in Dependency Wait found: " + smev.size(), SEVERITY_MESSAGE);
 
 		rescheduleVector(sysEnv, smev, sv, SDMSSubmittedEntity.DEPENDENCY_WAIT);
@@ -446,8 +444,8 @@ public class SchedulingThread extends InternalSession
 		SDMSSubmittedEntity sme;
 		int i;
 
-		Vector smev = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, new Integer(SDMSSubmittedEntity.SYNCHRONIZE_WAIT), null, Integer.MAX_VALUE);
-		Vector sv = SDMSScopeTable.idx_type.getVector(sysEnv, new Integer(SDMSScope.SERVER));
+		Vector smev = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, SDMSConstants.SME_SYNCHRONIZE_WAIT, null, Integer.MAX_VALUE);
+		Vector sv = SDMSScopeTable.idx_type.getVector(sysEnv, SDMSConstants.S_SERVER);
 		doTrace(cEnv, "Number of Job Server : " + sv.size(), SEVERITY_DEBUG);
 		doTrace(cEnv, "Number of Jobs in SYNCHRONIZE_WAIT : " + smev.size(), SEVERITY_DEBUG);
 		if(sv.size() == 0) {
@@ -535,9 +533,9 @@ public class SchedulingThread extends InternalSession
 			++envmiss;
 			Vector envv = SDMSEnvironmentTable.idx_neId.getVector(sysEnv, envId, actVersion);
 			SDMSNamedEnvironment ne = SDMSNamedEnvironmentTable.getObject(sysEnv, envId, actVersion);
-			validFrom = new Long(ne.getValidFrom(sysEnv));
-			validTo = new Long(ne.getValidTo(sysEnv));
-			result = SDMSScopeTable.idx_type.getVectorForUpdate(sysEnv, new Integer(SDMSScope.SERVER));
+			validFrom = Long.valueOf(ne.getValidFrom(sysEnv));
+			validTo = Long.valueOf(ne.getValidTo(sysEnv));
+			result = SDMSScopeTable.idx_type.getVectorForUpdate(sysEnv, SDMSConstants.S_SERVER);
 			Iterator i = result.iterator();
 			while (i.hasNext()) {
 				SDMSScope s = (SDMSScope) i.next();
@@ -614,12 +612,12 @@ public class SchedulingThread extends InternalSession
 			nrId = r.getNrId(sysEnv);
 			if(ra.getAllocationType(sysEnv).intValue() == SDMSResourceAllocation.RESERVATION) {
 				if(fpFolder.containsKey(nrId) || fpLocal.containsKey(nrId)) {
-					ra.setAllocationType(sysEnv, new Integer(SDMSResourceAllocation.ALLOCATION));
+					ra.setAllocationType(sysEnv, SDMSConstants.RA_ALLOCATION);
 				} else {
 					srId = (Long) sfp.get(nrId);
 					sr = SDMSResourceTable.getObjectForUpdate(sysEnv, srId);
 					if(sr.getId(sysEnv).equals(rId)) {
-						ra.setAllocationType(sysEnv, new Integer(SDMSResourceAllocation.ALLOCATION));
+						ra.setAllocationType(sysEnv, SDMSConstants.RA_ALLOCATION);
 					}
 				}
 				if (ra.getIsSticky(sysEnv).booleanValue()) {
@@ -919,7 +917,7 @@ public class SchedulingThread extends InternalSession
 		try {
 			SDMSResourceAllocation ra = SDMSResourceAllocationTable.idx_smeId_rId_stickyName_getUniqueForUpdate(
 				sysEnv, new SDMSKey(smeId, rId, rr.getStickyName(sysEnv)));
-			ra.setRefcount(sysEnv, new Integer(ra.getRefcount(sysEnv).intValue() + 1));
+			ra.setRefcount(sysEnv, Integer.valueOf(ra.getRefcount(sysEnv).intValue() + 1));
 			return;
 		} catch (NotFoundException nfe) {
 		}
@@ -927,7 +925,7 @@ public class SchedulingThread extends InternalSession
 
 		if(type == SDMSNamedResource.SYNCHRONIZING) {
 			lock = rr.getLockmode(sysEnv);
-			if(lock == null) lock = new Integer(Lockmode.N);
+			if(lock == null) lock = SDMSConstants.RR_N;
 			rsmpId = rr.getRsmpId(sysEnv);
 			Long stickyParentSeId = rr.getStickyParent(sysEnv);
 			if (rr.getIsSticky(sysEnv).booleanValue()) {
@@ -969,15 +967,15 @@ public class SchedulingThread extends InternalSession
 				}
 			}
 		} else {
-			lock = new Integer(Lockmode.N);
+			lock = SDMSConstants.RR_N;
 			rsmpId = null;
 		}
 
-		Integer reqAmount = new Integer((int) Math.ceil(rr.getAmount(sysEnv).intValue() * factor));
+		Integer reqAmount = Integer.valueOf((int) Math.ceil(rr.getAmount(sysEnv).intValue() * factor));
 
 		if (rr.getIsSticky(sysEnv).booleanValue()) {
 			String stickyName = rr.getStickyName(sysEnv);
-			Long nStickyParentId = new Long(- stickyParentId.longValue());
+			Long nStickyParentId = Long.valueOf(- stickyParentId.longValue());
 			SDMSKey masterKey = new SDMSKey(nStickyParentId, stickyName, nrId);
 			Vector ravok = (Vector) masterMap.get(masterKey);
 			if (ravok == null) {
@@ -1029,11 +1027,11 @@ public class SchedulingThread extends InternalSession
 									"Invalid lock escalation for already reserved sticky resource $1, job definition $2",
 										rId, se.pathString(sysEnv)));
 							}
-							ra.setLockmode(sysEnv, new Integer(raLockMode));
+							ra.setLockmode(sysEnv, Integer.valueOf(raLockMode));
 						}
 
 						int refCount = ra.getRefcount(sysEnv).intValue();
-						ra.setRefcount(sysEnv, new Integer(refCount + 1));
+						ra.setRefcount(sysEnv, Integer.valueOf(refCount + 1));
 						break;
 					}
 				}
@@ -1050,10 +1048,10 @@ public class SchedulingThread extends InternalSession
 							rr.getIsSticky(sysEnv),
 							rr.getStickyName(sysEnv),
 							stickyParentId,
-							new Integer(SDMSResourceAllocation.MASTER_REQUEST),
+					                SDMSConstants.RA_MASTER_REQUEST,
 							null,
 							lock,
-							ONE);
+					                SDMSConstants.iONE);
 				} catch (DuplicateKeyException dke) {
 				}
 			}
@@ -1067,10 +1065,10 @@ public class SchedulingThread extends InternalSession
 							rr.getIsSticky(sysEnv),
 							rr.getStickyName(sysEnv),
 							stickyParentId,
-							new Integer(SDMSResourceAllocation.REQUEST),
+		                			SDMSConstants.RA_REQUEST,
 							rsmpId,
 							lock,
-							ONE);
+		                			SDMSConstants.iONE);
 	}
 
 	private Vector findRelevantJobserver (SystemEnvironment sysEnv, SDMSSubmittedEntity sme)
@@ -1130,7 +1128,7 @@ public class SchedulingThread extends InternalSession
 			if(reserveSyncResources(sysEnv, sme, se, actVersion, sfp, resourceChain, rrvi)) {
 				resourcesReserved = true;
 				SDMSRunnableQueue rq = SDMSRunnableQueueTable.idx_smeId_scopeId_getUniqueForUpdate(sysEnv, new SDMSKey(smeId, sId));
-				rq.setState(sysEnv, new Integer(SDMSSubmittedEntity.RESOURCE_WAIT));
+				rq.setState(sysEnv, SDMSConstants.SME_RESOURCE_WAIT);
 			}
 		}
 
@@ -1152,7 +1150,7 @@ public class SchedulingThread extends InternalSession
 					rq.delete(sysEnv);
 				}
 			}
-			sme.setState(sysEnv, new Integer(SDMSSubmittedEntity.RESOURCE_WAIT));
+			sme.setState(sysEnv, SDMSConstants.SME_RESOURCE_WAIT);
 		} else {
 			checkTimeout(sysEnv, sme, se, actVersion);
 		}
@@ -1284,7 +1282,7 @@ public class SchedulingThread extends InternalSession
 		if (sysEnv.maxWriter > 1)
 			LockingSystem.lock(sysEnv, this, ObjectLock.EXCLUSIVE);
 
-		sv = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, new Integer(SDMSSubmittedEntity.RESOURCE_WAIT), null, Integer.MAX_VALUE);
+		sv = SDMSSubmittedEntityTable.idx_state.getVectorForUpdate(sysEnv, SDMSConstants.SME_RESOURCE_WAIT, null, Integer.MAX_VALUE);
 		doTrace(cEnv, "Number of Jobs in RESOURCE_WAIT : " + sv.size(), SEVERITY_DEBUG);
 
 		pc.setNow();
@@ -1341,7 +1339,7 @@ public class SchedulingThread extends InternalSession
 			HashMap sfp = (SDMSnpSrvrSRFootprintTable.idx_sId_getUnique(sysEnv, s.getId(sysEnv))).getFp(sysEnv);
 			if(reserveSysResources(sysEnv, sme, sfp, resourceChain, it)) {
 				resourcesReserved = true;
-				rq.setState(sysEnv, new Integer(SDMSSubmittedEntity.RUNNABLE));
+				rq.setState(sysEnv, SDMSConstants.SME_RUNNABLE);
 				allocateAndReleaseResources(sysEnv, sme, s);
 				break;
 			}
@@ -1365,7 +1363,7 @@ public class SchedulingThread extends InternalSession
 					rq.delete(sysEnv);
 				}
 			}
-			sme.setState(sysEnv, new Integer(SDMSSubmittedEntity.RUNNABLE));
+			sme.setState(sysEnv, SDMSConstants.SME_RUNNABLE);
 			sysEnv.notifier.addJobServerToNotify(s.getId(sysEnv));
 		} else {
 			checkTimeout(sysEnv, sme, se, actVersion);
@@ -1420,7 +1418,7 @@ public class SchedulingThread extends InternalSession
 			}
 
 			Integer jAmount;
-			if(rr == null)	jAmount = new Integer(0);
+			if(rr == null)	jAmount = SDMSConstants.iONE;
 			else		jAmount = rr.getAmount(sysEnv);
 			if(sAmount == null)
 				continue;
@@ -1471,7 +1469,7 @@ public class SchedulingThread extends InternalSession
 			}
 
 			Integer jAmount;
-			if(rr == null)	jAmount = new Integer(0);
+			if(rr == null)	jAmount = SDMSConstants.iZERO;
 			else		jAmount = rr.getAmount(sysEnv);
 			if(sAmount == null)
 				continue;
@@ -1558,7 +1556,7 @@ public class SchedulingThread extends InternalSession
 				isSticky = rr.getIsSticky(sysEnv).booleanValue();
 				if(isSticky) {
 					stickyParent = ra.getStickyParent(sysEnv);
-					nStickyParent = new Long(- stickyParent.longValue());
+					nStickyParent = Long.valueOf(- stickyParent.longValue());
 					rrStickyName = rr.getStickyName(sysEnv);
 
 					try {
@@ -1581,7 +1579,7 @@ public class SchedulingThread extends InternalSession
 						throw new SDMSEscape();
 					}
 					if(mri.mustAllocate) {
-						mra.setAllocationType(sysEnv, new Integer(SDMSResourceAllocation.MASTER_RESERVATION));
+						mra.setAllocationType(sysEnv, SDMSConstants.RA_MASTER_RESERVATION);
 					}
 				}
 
@@ -1600,13 +1598,13 @@ public class SchedulingThread extends InternalSession
 					continue;
 				}
 
-				ra.setAllocationType(sysEnv, new Integer(SDMSResourceAllocation.RESERVATION));
+				ra.setAllocationType(sysEnv, SDMSConstants.RA_RESERVATION);
 
 				if(isSticky) {
 					int mAmount = mra.getAmount(sysEnv).intValue();
 					int raAmount = ra.getAmount(sysEnv).intValue();
 
-					mra.setAmount(sysEnv, new Integer(mAmount - raAmount));
+					mra.setAmount(sysEnv, Integer.valueOf(mAmount - raAmount));
 				}
 			}
 			if(!allocSucceeded) throw new SDMSEscape();
@@ -1699,17 +1697,17 @@ public class SchedulingThread extends InternalSession
 		}
 
 		ra = SDMSResourceAllocationTable.table.create(sysEnv,
-						rId, new Long(- sme.getMasterId(sysEnv)), nrId,
-						new Integer(amount),
-						new Integer(amount),
-						rr.getKeepMode(sysEnv),
-						Boolean.TRUE,
-						null,
-						sme.getMasterId(sysEnv),
-						new Integer(SDMSResourceAllocation.MASTER_REQUEST),
-						null,
-						new Integer(lockmode),
-						new Integer(refcount));
+		                rId, Long.valueOf(- sme.getMasterId(sysEnv)), nrId,
+		                Integer.valueOf(amount),
+		                Integer.valueOf(amount),
+		                rr.getKeepMode(sysEnv),
+		                Boolean.TRUE,
+		                null,
+		                sme.getMasterId(sysEnv),
+		                SDMSConstants.RA_MASTER_REQUEST,
+		                null,
+		                Integer.valueOf(lockmode),
+		                Integer.valueOf(refcount));
 
 		return ra;
 	}
@@ -1737,7 +1735,7 @@ public class SchedulingThread extends InternalSession
 		SDMSResourceAllocation ra = null;
 		float factor = 1;
 		String rrStickyName = rr.getStickyName(sysEnv);
-		Long nStickyParent = new Long(- stickyParent.longValue());
+		Long nStickyParent = Long.valueOf(- stickyParent.longValue());
 
 		mri.stickyName = rrStickyName;
 		mri.stickyParent = stickyParent;
@@ -1836,7 +1834,7 @@ public class SchedulingThread extends InternalSession
 					throw new SDMSEscape();
 				}
 
-				ra.setAllocationType(sysEnv, new Integer(SDMSResourceAllocation.RESERVATION));
+				ra.setAllocationType(sysEnv, SDMSConstants.RA_RESERVATION);
 			}
 			if(!allocSucceeded) throw new SDMSEscape();
 			if(resourceChain != null) {
@@ -2174,7 +2172,7 @@ public class SchedulingThread extends InternalSession
 		SDMSScope s;
 		Vector v;
 
-		v = SDMSScopeTable.idx_type.getVector(sysEnv, new Integer(SDMSScope.SERVER));
+		v = SDMSScopeTable.idx_type.getVector(sysEnv, SDMSConstants.S_SERVER);
 		for(int j = 0; j < v.size(); j++) {
 			s = (SDMSScope) v.get(j);
 			SDMSnpSrvrSRFootprintTable.table.create(sysEnv, s.getId(sysEnv), null, getScopeFootprint(sysEnv, s));
@@ -2184,7 +2182,7 @@ public class SchedulingThread extends InternalSession
 			Vector rl = new Vector();
 			SDMSSubmittedEntity sme;
 			SDMSSchedulingEntity se;
-			v = SDMSSubmittedEntityTable.idx_state.getVector(sysEnv, new Integer(SDMSSubmittedEntity.DEPENDENCY_WAIT));
+			v = SDMSSubmittedEntityTable.idx_state.getVector(sysEnv, SDMSConstants.SME_DEPENDENCY_WAIT);
 			for (int i = 0; i < v.size(); ++i) {
 				sme = (SDMSSubmittedEntity) v.get(i);
 				se = SDMSSchedulingEntityTable.getObject(sysEnv, sme.getSeId(sysEnv), sme.getSeVersion(sysEnv));
@@ -2192,7 +2190,7 @@ public class SchedulingThread extends InternalSession
 				if (sme.getOldState(sysEnv) != null)
 					rl.add(sme.getId(sysEnv));
 			}
-			v = SDMSSubmittedEntityTable.idx_state.getVector(sysEnv, new Integer(SDMSSubmittedEntity.SYNCHRONIZE_WAIT));
+			v = SDMSSubmittedEntityTable.idx_state.getVector(sysEnv, SDMSConstants.SME_SYNCHRONIZE_WAIT);
 			for (int i = 0; i < v.size(); ++i) {
 				sme = (SDMSSubmittedEntity) v.get(i);
 				se = SDMSSchedulingEntityTable.getObject(sysEnv, sme.getSeId(sysEnv), sme.getSeVersion(sysEnv));
@@ -2243,7 +2241,7 @@ public class SchedulingThread extends InternalSession
 				needReSched = true;
 				break;
 			default:
-				throw new FatalException(new SDMSMessage(sysEnv, "03202252140", "Unknown change code $1", new Integer(change)));
+				throw new FatalException(new SDMSMessage(sysEnv, "03202252140", "Unknown change code $1", Integer.valueOf(change)));
 		}
 		needSched = true;
 	}
@@ -2259,7 +2257,7 @@ public class SchedulingThread extends InternalSession
 			case DELETE:
 				break;
 			default:
-				throw new FatalException(new SDMSMessage(sysEnv, "03203060018", "Unknown change code $1", new Integer(change)));
+				throw new FatalException(new SDMSMessage(sysEnv, "03203060018", "Unknown change code $1", Integer.valueOf(change)));
 		}
 		needSched = true;
 	}
@@ -2302,7 +2300,7 @@ public class SchedulingThread extends InternalSession
 				needSched = true;
 				break;
 			default:
-				throw new FatalException(new SDMSMessage(sysEnv, "03202252142", "Unknown change code $1", new Integer(change)));
+				throw new FatalException(new SDMSMessage(sysEnv, "03202252142", "Unknown change code $1", Integer.valueOf(change)));
 		}
 		needSched = true;
 	}
@@ -2344,7 +2342,7 @@ public class SchedulingThread extends InternalSession
 				needSched = true;
 				break;
 			default:
-				throw new FatalException(new SDMSMessage(sysEnv, "03202252317", "Unknown change code $1", new Integer(change)));
+				throw new FatalException(new SDMSMessage(sysEnv, "03202252317", "Unknown change code $1", Integer.valueOf(change)));
 		}
 	}
 
@@ -2527,7 +2525,6 @@ class Locklist
 {
 	private HashMap lpr;
 	private HashMap lpj;
-	static private final Long ZERO = new Long(0);
 
 	public Locklist()
 	{
@@ -2546,7 +2543,7 @@ class Locklist
 
 	public Reservator get(Long rId)
 	{
-		return get(rId, ZERO);
+		return get(rId, SDMSConstants.lZERO);
 	}
 
 	public void set(Reservator r)
@@ -2557,10 +2554,10 @@ class Locklist
 			lpr.put(r.rId, h);
 		}
 		h.put(r.smeId, r);
-		Reservator rt = (Reservator) h.get(ZERO);
+		Reservator rt = (Reservator) h.get(SDMSConstants.lZERO);
 		if(rt == null) {
-			rt = new Reservator(r.rId, ZERO);
-			h.put(ZERO, rt);
+			rt = new Reservator(r.rId, SDMSConstants.lZERO);
+			h.put(SDMSConstants.lZERO, rt);
 		}
 		rt.amount += r.amount;
 		rt.addLock(r.lock);
@@ -2584,9 +2581,9 @@ class Locklist
 			Long rId = (Long) i.next();
 			HashMap rh = (HashMap) lpr.get(rId);
 			rh.remove(smeId);
-			rh.remove(ZERO);
+			rh.remove(SDMSConstants.lZERO);
 
-			Reservator zr = new Reservator(rId, ZERO);
+			Reservator zr = new Reservator(rId, SDMSConstants.lZERO);
 			Iterator j = rh.values().iterator();
 			while(j.hasNext()) {
 				Reservator r = (Reservator) j.next();
@@ -2594,7 +2591,7 @@ class Locklist
 				zr.addLock(r.lock);
 				zr.seq++;
 			}
-			rh.put(ZERO, zr);
+			rh.put(SDMSConstants.lZERO, zr);
 		}
 		lpj.remove(smeId);
 	}
@@ -2606,8 +2603,8 @@ class Locklist
 		if(h.remove(rId) == null) return;
 		h = (HashMap) lpr.get(rId);
 		h.remove(smeId);
-		h.remove(ZERO);
-		Reservator zr = new Reservator(rId, ZERO);
+		h.remove(SDMSConstants.lZERO);
+		Reservator zr = new Reservator(rId, SDMSConstants.lZERO);
 		Iterator i = h.values().iterator();
 		while(i.hasNext()) {
 			Reservator r = (Reservator) i.next();
@@ -2615,7 +2612,7 @@ class Locklist
 			zr.addLock(r.lock);
 			zr.seq++;
 		}
-		h.put(ZERO, zr);
+		h.put(SDMSConstants.lZERO, zr);
 	}
 }
 
