@@ -88,7 +88,7 @@ public class ListRsp extends Node
 
 		result.setFeedback(
 			new SDMSMessage(sysEnv, "03201101444", "$1 Resource State Profile(s) found",
-					new Integer(d_container.lines)));
+		                        Integer.valueOf(d_container.lines)));
 
 	}
 
