@@ -66,7 +66,7 @@ public class ListWt extends Node
 		result.setOutputContainer(d_container);
 
 		result.setFeedback(
-		        new SDMSMessage(sysEnv, "02108241007", "$1 Watch Type(s) found", new Integer(d_container.lines)));
+		        new SDMSMessage(sysEnv, "02108241007", "$1 Watch Type(s) found", Integer.valueOf(d_container.lines)));
 	}
 
 }
