@@ -127,11 +127,11 @@ public class SelectCmd extends Node
 	{
 		Long sId;
 		if(o instanceof Integer) {
-			sId = new Long (((Integer) o).intValue());
+			sId = Long.valueOf (((Integer) o).intValue());
 		} else if(o instanceof Long) {
 			sId = (Long) o;
 		} else if(o instanceof java.math.BigDecimal) {
-			sId = new Long (((java.math.BigDecimal) o).intValue());
+			sId = Long.valueOf (((java.math.BigDecimal) o).intValue());
 		} else {
 			throw new CommonErrorException(new SDMSMessage(sysEnv, "03204250147",
 				"Type Error, Column is not an Id but a $1", o.getClass().getName()));
@@ -240,7 +240,6 @@ public class SelectCmd extends Node
 		throws SDMSException
 	{
 		Long sgId = null;
-		Long ZERO = new Long(0);
 
 		if(!sysEnv.cEnv.gid().contains(SDMSObject.adminGId)) {
 			SDMSPrivilege p = new SDMSPrivilege();
@@ -248,7 +247,7 @@ public class SelectCmd extends Node
 			for(int i = 0; i < v.size(); i++) {
 				SDMSMember m = (SDMSMember) v.get(i);
 				try {
-					SDMSGrant gr = SDMSGrantTable.idx_objectId_gId_getUnique(sysEnv, new SDMSKey(ZERO , m.getGId(sysEnv)));
+					SDMSGrant gr = SDMSGrantTable.idx_objectId_gId_getUnique(sysEnv, new SDMSKey(SDMSConstants.lZERO, m.getGId(sysEnv)));
 					p.addPriv(sysEnv, gr.getPrivs(sysEnv).longValue());
 				} catch (NotFoundException nfe) {
 				}
@@ -310,13 +309,13 @@ public class SelectCmd extends Node
 				sca[i] = ((Integer) sv.get(i)).intValue();
 				if (sca[i] >= d_container.columns)
 					throw new CommonErrorException(new SDMSMessage(sysEnv, "03003081227",
-								"The sort column specified ($1) exceeds the number of columns in the output", new Integer(sca[i])));
+					                               "The sort column specified ($1) exceeds the number of columns in the output", Integer.valueOf(sca[i])));
 			}
 			Collections.sort(d_container.dataset, d_container.getComparator(sysEnv, sca));
 		}
 
 		result.setOutputContainer(d_container);
-		result.setFeedback(new SDMSMessage(sysEnv, "03204112153", "$1 Row(s) selected", new Integer(read)));
+		result.setFeedback(new SDMSMessage(sysEnv, "03204112153", "$1 Row(s) selected", Integer.valueOf(read)));
 	}
 }
 
