@@ -51,7 +51,7 @@ public class RepositoryChecker
 	private static boolean smeDead(SystemEnvironment env, Long smeId) throws SDMSException
 	{
 		boolean dead = false;
-		if (smeId.longValue() < 0) smeId = new Long(- smeId.longValue());
+		if (smeId.longValue() < 0) smeId = Long.valueOf(- smeId.longValue());
 		try {
 			SDMSSubmittedEntity sme = SDMSSubmittedEntityTable.getObject(env, smeId);
 			Integer state = sme.getState(env);
