@@ -60,7 +60,7 @@ public class SDMSAuditTrailTable extends SDMSAuditTrailTableGeneric
 		throws SDMSException
 	{
 		if (env.checkFeature(SystemEnvironment.S_AUDITTRAIL)) {
-			return super.create(env, p_userId, p_ts, new Long(env.tx.txId), p_action, p_objectType, p_objectId, p_originId, p_isSetWarning, p_actionInfo, p_actionComment);
+			return super.create(env,p_userId,p_ts, Long.valueOf(env.tx.txId), p_action,p_objectType,p_objectId,p_originId,p_isSetWarning,p_actionInfo,p_actionComment);
 		} else return null;
 	}
 }
