@@ -172,21 +172,21 @@ public class SDMSResourceStateMappingTableGeneric extends SDMSTable
 		long validTo;
 
 		try {
-			id     = new Long (r.getLong(1));
-			rsmpId = new Long (r.getLong(2));
-			esdId = new Long (r.getLong(3));
-			fromRsdId = new Long (r.getLong(4));
+			id     = Long.valueOf (r.getLong(1));
+			rsmpId = Long.valueOf (r.getLong(2));
+			esdId = Long.valueOf (r.getLong(3));
+			fromRsdId = Long.valueOf (r.getLong(4));
 			if (r.wasNull()) fromRsdId = null;
-			toRsdId = new Long (r.getLong(5));
-			creatorUId = new Long (r.getLong(6));
-			createTs = new Long (r.getLong(7));
-			changerUId = new Long (r.getLong(8));
-			changeTs = new Long (r.getLong(9));
+			toRsdId = Long.valueOf (r.getLong(5));
+			creatorUId = Long.valueOf (r.getLong(6));
+			createTs = Long.valueOf (r.getLong(7));
+			changerUId = Long.valueOf (r.getLong(8));
+			changeTs = Long.valueOf (r.getLong(9));
 			validFrom = r.getLong(10);
 			validTo = r.getLong(11);
 		} catch(SQLException sqle) {
 			SDMSThread.doTrace(null, "SQL Error : " + sqle.getMessage(), SDMSThread.SEVERITY_ERROR);
-			throw new FatalException(new SDMSMessage(env, "01110182045", "ResourceStateMapping: $1 $2", new Integer(sqle.getErrorCode()), sqle.getMessage()));
+			throw new FatalException(new SDMSMessage(env, "01110182045", "ResourceStateMapping: $1 $2", Integer.valueOf(sqle.getErrorCode()), sqle.getMessage()));
 		}
 		if(validTo < env.lowestActiveVersion) return null;
 		return new SDMSResourceStateMappingGeneric(id,
