@@ -162,21 +162,21 @@ public class SDMSTriggerStateTableGeneric extends SDMSTable
 		long validTo;
 
 		try {
-			id     = new Long (r.getLong(1));
-			triggerId = new Long (r.getLong(2));
-			fromStateId = new Long (r.getLong(3));
+			id     = Long.valueOf (r.getLong(1));
+			triggerId = Long.valueOf (r.getLong(2));
+			fromStateId = Long.valueOf (r.getLong(3));
 			if (r.wasNull()) fromStateId = null;
-			toStateId = new Long (r.getLong(4));
+			toStateId = Long.valueOf (r.getLong(4));
 			if (r.wasNull()) toStateId = null;
-			creatorUId = new Long (r.getLong(5));
-			createTs = new Long (r.getLong(6));
-			changerUId = new Long (r.getLong(7));
-			changeTs = new Long (r.getLong(8));
+			creatorUId = Long.valueOf (r.getLong(5));
+			createTs = Long.valueOf (r.getLong(6));
+			changerUId = Long.valueOf (r.getLong(7));
+			changeTs = Long.valueOf (r.getLong(8));
 			validFrom = r.getLong(9);
 			validTo = r.getLong(10);
 		} catch(SQLException sqle) {
 			SDMSThread.doTrace(null, "SQL Error : " + sqle.getMessage(), SDMSThread.SEVERITY_ERROR);
-			throw new FatalException(new SDMSMessage(env, "01110182045", "TriggerState: $1 $2", new Integer(sqle.getErrorCode()), sqle.getMessage()));
+			throw new FatalException(new SDMSMessage(env, "01110182045", "TriggerState: $1 $2", Integer.valueOf(sqle.getErrorCode()), sqle.getMessage()));
 		}
 		if(validTo < env.lowestActiveVersion) return null;
 		return new SDMSTriggerStateGeneric(id,
